--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.10.4",
+    "@netlify/neon": "^0.1.0",
     "@sentry/react": "^7.107.0",
     "@types/react-dnd": "^3.0.2",
     "@types/react-dnd-html5-backend": "^3.0.2",
+    "drizzle-kit": "^0.18.1",
+    "drizzle-orm": "^0.44.2",
     "framer-motion": "^11.0.14",
     "i18next": "^23.10.1",
     "lucide-react": "^0.344.0",
