--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@neondatabase/serverless": "^0.10.4",
     "@netlify/neon": "^0.1.0",
     "@sentry/react": "^7.107.0",
+    "@supabase/supabase-js": "^2.50.0",
     "@types/react-dnd": "^3.0.2",
     "@types/react-dnd-html5-backend": "^3.0.2",
     "drizzle-kit": "^0.18.1",
