--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.50.0",
     "@types/react-dnd": "^3.0.2",
     "@types/react-dnd-html5-backend": "^3.0.2",
+    "canvas-confetti": "^1.9.3",
     "drizzle-kit": "^0.18.1",
     "drizzle-orm": "^0.44.2",
     "framer-motion": "^11.0.14",
