--- a/package.json
+++ b/package.json
@@ -10,15 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@neondatabase/serverless": "^0.10.4",
-    "@netlify/neon": "^0.1.0",
+    "@revenuecat/purchases-js": "^1.0.0",
+    "@sentry/node": "^7.107.0",
     "@sentry/react": "^7.107.0",
     "@supabase/supabase-js": "^2.50.0",
     "@types/react-dnd": "^3.0.2",
     "@types/react-dnd-html5-backend": "^3.0.2",
     "canvas-confetti": "^1.9.3",
-    "drizzle-kit": "^0.18.1",
-    "drizzle-orm": "^0.44.2",
+    "dotenv": "^16.5.0",
     "framer-motion": "^11.0.14",
     "i18next": "^23.10.1",
     "lucide-react": "^0.344.0",
@@ -41,6 +40,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
+    "netlify-cli": "^22.1.3",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
