--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "globals": "^15.9.0",
     "netlify-cli": "^22.1.3",
     "postcss": "^8.4.35",
+    "rollup": "^4.44.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
