--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@sentry/node": "^7.107.0",
+    "@sentry/node": "^7.120.3",
     "@sentry/react": "^7.107.0",
-    "@supabase/supabase-js": "^2.50.0",
+    "@supabase/supabase-js": "^2.50.3",
     "@types/react-dnd": "^3.0.2",
     "@types/react-dnd-html5-backend": "^3.0.2",
     "canvas-confetti": "^1.9.3",
@@ -20,6 +20,7 @@
     "framer-motion": "^11.0.14",
     "i18next": "^23.10.1",
     "lucide-react": "^0.344.0",
+    "node-fetch": "^2.7.0",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
