--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,18 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependency directories
 node_modules
 dist
 dist-ssr
+.netlify
+build
+
+# Local environment files
+.env
+.env.local
+.env.development
+.env.production
 *.local
 
 # Editor directories and files
@@ -22,8 +31,10 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-.env
 
-# Local Netlify folder
-.netlify
-.env 
+# Cache and temporary files
+.cache
+*.cache
+*.bak
+*.swp
+*~
